# computer_vision_project

./: .gitignore  CMakeLists.txt  Gemfile  README.md  main.cpp  unpacker.rb
